<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  <item android:id="@+id/budgets"
    android:title="@string/budgets">
    <menu>
      <item android:id="@+id/item1" android:title="Placeholder"></item>
    </menu>
  </item>
  <item android:id="@+id/more_options"
    android:title="@string/more_options">
    <menu>
      <item android:id="@+id/about_destination"
        android:title="@string/about"
        android:icon="@drawable/ic_info"/>
      <item android:id="@+id/faq_destination"
        android:title="@string/faq"
        android:icon="@drawable/ic_help"/>
      <item android:id="@+id/create_budget_destination"
        android:title="@string/create_budget"
        android:icon="@drawable/ic_add_circle"/>
    </menu>
  </item>
</menu>