<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="createBudgetViewModel"
      type="com.example.android.budgettracker.screens.budget.CreateBudgetViewModel" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".screens.budget.CreateBudgetFragment">

      <TextView
        android:id="@+id/budget_create_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="clip_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <EditText
        android:id="@+id/budget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@{createBudgetViewModel.name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_create_new_text" />

      <EditText
        android:id="@+id/budget_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/gross_annual_salary"
        android:inputType="numberDecimal"
        android:text="@{createBudgetViewModel.salary}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_name" />

      <EditText
        android:id="@+id/budget_tax_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/tax_rate"
        android:inputType="numberDecimal"
        android:text="@{createBudgetViewModel.tax}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_salary" />

      <TextView
        android:id="@+id/budget_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/budget_categories"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_tax_rate" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budget_categories_list"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/budget_add_category_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_categories" />

      <Button
        android:id="@+id/budget_add_category_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_category"
        android:onClick="@{() -> createBudgetViewModel.onAddCategory(budgetName.getText().toString(), budgetSalary.getText().toString(), budgetTaxRate.getText().toString())}"
        app:layout_constraintBottom_toTopOf="@+id/budget_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_categories_list" />

      <Button
        android:id="@+id/budget_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="@{() -> createBudgetViewModel.onDone(budgetName.getText().toString(), budgetSalary.getText().toString(), budgetTaxRate.getText().toString())}"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_add_category_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</layout>